rserglp and other bits n bobs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -205,7 +205,9 @@ nav:
         - Guards: eco/rosen/rosen-guard.md
         - Tokenomics: eco/rosen/rosen-tokenomics.md
         - Team: eco/rosen/rosen-team.md
-        - Uses: eco/rosen/rosen-uses.md
+        - Uses:
+          - eco/rosen/rosen-uses.md
+          - rsERG-LP: tutorials/rsERGLP.md
       - Oracles: 
         - uses/oracles.md
         - Oracle Pools V2: eco/oracles-v2.md
