--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,8 +23,8 @@ theme:
         - content.action.view
         - content.code.copy
         - navigation.tabs
-        #- navigation.instant
-        #- navigation.sections # The bold sections in navigation
+        # - navigation.instant
+        # - navigation.sections # The bold sections in navigation
         - navigation.tracking
         - navigation.indexes
         - content.tabs.link
@@ -37,10 +37,10 @@ theme:
 extra_css: 
   - assets/extra.css
   - assets/neoteroi-mkdocs.css
-  #- https://unpkg.com/mermaid@8.5.1/dist/mermaid.css #404 ? 
+  # - https://unpkg.com/mermaid@8.5.1/dist/mermaid.css #404 ? 
 extra_javascript:
   - assets/extra.js
-  #- assets/mathjax.js
+  # - assets/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
   - https://unpkg.com/mermaid@8.5.1/dist/mermaid.min.js
@@ -62,52 +62,65 @@ extra:
 
 plugins:
   - search
-
   - render_swagger:
       allow_arbitrary_locations: true
   - neoteroi.mkdocsoad
   - mkdocs-jupyter #https://github.com/danielfrg/mkdocs-jupyter
   - section-index #https://github.com/oprypin/mkdocs-section-index
-  #- swagger
-  #- awesome-pages https://github.com/lukasgeiter/mkdocs-awesome-pages-plugin
+  # - swagger
+  # - awesome-pages #https://github.com/lukasgeiter/mkdocs-awesome-pages-plugin
   - autolinks 
   - tags: # https://squidfunk.github.io/mkdocs-material/setup/setting-up-tags/#
       tags_file: tags.md
-  #- categories
-  #- exclude-search # https://github.com/chrieke/mkdocs-exclude-search
-  #- semiliterate # http://studioinfinity.org/semiliterate/mkdocs_semiliterate/plugin/
-  #- awesome-list
-  #- pagenav-generator #https://github.com/Andre601/mkdocs-pagenav-generator
+  # - categories
+  # - exclude-search # https://github.com/chrieke/mkdocs-exclude-search
+  # - semiliterate # http://studioinfinity.org/semiliterate/mkdocs_semiliterate/plugin/
+  # - awesome-list
+  # - pagenav-generator #https://github.com/Andre601/mkdocs-pagenav-generator
 
 
 
 markdown_extensions:
-  - pymdownx.details
-  - pymdownx.tasklist:
-        custom_checkbox: true
-  - codehilite
-  - extra
-  - tables
-  - neoteroi.cards
-  - meta
-  - fenced_code
-  - toc:
-        permalink: "#"
-        baselevel: 1
-        toc_depth: 3
-  - admonition
-  - pymdownx.inlinehilite
-  - pymdownx.superfences:
+  - pymdownx.details  # Adds collapsible content sections with a "details" block.
+  - pymdownx.tasklist:  # Enables task lists with checkboxes.
+        custom_checkbox: true  # Allows custom checkboxes for task lists.
+  - codehilite  # Enables syntax highlighting for code blocks.
+  - extra  # Adds extra Markdown features (e.g., tables, definition lists).
+  - tables  # Enables support for tables in Markdown.
+  - neoteroi.cards  # Adds card-like components for visually structured content.
+  - meta  # Allows the use of metadata blocks at the top of Markdown files.
+  - fenced_code  # Adds support for fenced code blocks (e.g., triple backticks).
+  - toc:  # Generates a Table of Contents (TOC) for the document.
+        permalink: "#"  # Adds permalinks to each TOC entry.
+        baselevel: 1  # Sets the starting heading level for TOC generation.
+        toc_depth: 3  # Limits TOC to include headings up to level 3.
+  - admonition  # Adds support for note, warning, and other admonition blocks.
+  - pymdownx.inlinehilite  # Enables inline syntax highlighting for code snippets.
+  - pymdownx.superfences:  # Extends fenced code blocks with custom fences.
       custom_fences:
-        - name: mermaid
-          class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_div_format
-  - pymdownx.arithmatex:
-      generic: true
-  - pymdownx.tabbed:
-      alternate_style: true 
-  - pymdownx.blocks.admonition
-  - pymdownx.blocks.details
+        - name: mermaid  # Adds support for Mermaid diagrams.
+          class: mermaid  # Specifies the class to apply for Mermaid diagrams.
+          format: !!python/name:pymdownx.superfences.fence_div_format  # Specifies formatting.
+  - pymdownx.arithmatex:  # Adds support for LaTeX math equations.
+      generic: true  # Uses a generic format for better compatibility.
+  - pymdownx.tabbed:  # Enables tabbed content blocks.
+      alternate_style: true  # Applies an alternate visual style for tabs.
+  - pymdownx.blocks.admonition  # Adds block-level admonitions with enhanced features.
+  - pymdownx.blocks.details  # Enhances collapsible "details" blocks.
+  - attr_list  # Allows adding HTML attributes to Markdown elements.
+  - md_in_html  # Enables using Markdown syntax inside HTML tags.
+  - pymdownx.tasklist  # Re-enables task lists (optional duplicate entry).
+  - pymdownx.betterem  # Enhances emphasis and strong emphasis detection.
+  - pymdownx.tilde  # Adds support for strikethrough and subscript text.
+  - pymdownx.highlight  # Enables advanced syntax highlighting for code blocks.
+  - pymdownx.snippets  # Include external content or reusable snippets
+  - pymdownx.emoji  # Adds emoji support
+  - pymdownx.magiclink  # Auto-detects URLs and emails
+  - pymdownx.caret  # Enables superscript syntax
+  - pymdownx.mark  # Highlights text with ==
+  - pymdownx.smartsymbols  # Replaces common symbols (e.g., (c) → ©)
+  - pymdownx.keys  # Keyboard key representation
+  - pymdownx.saneheaders  # Enforces stricter header syntax
 
 
 
@@ -117,7 +130,6 @@ nav:
     - Why Ergo: dev/protocol/why.md
     - Key Features: 
       - dev/protocol/index.md
-      - Protocol: dev/protocol/index.md
       - eUTxO:
         - dev/protocol/eutxo.md
         - UTxO vs Account: dev/protocol/eutxo/accountveutxo.md
@@ -179,18 +191,8 @@ nav:
         - Common Misconceptions: fud-faq.md
         - A CBDC For All: uses/cbdc.md
 
-  #
-  # Get Involved
-  #
-  #- Get Started:
-   # - getting-started.md
-    
 
 
-
-#
-# ECOSYSTEM SECTION
-#
 
   - Ecosystem: 
     - uses/index.md
@@ -241,10 +243,10 @@ nav:
 
       - Monetary Systems:
         - SigmaUSD: uses/sigmausd.md
-          #- Examples: uses/sigmausd/examples.md
-          #- Mining Incentives: uses/sigmausd/mining-incentives.md
-          #- Other Stablecoins: uses/sigmausd/comparison.md
-          #- Why?: uses/sigmausd/why-sigusd.md
+          # - Examples: uses/sigmausd/examples.md
+          # - Mining Incentives: uses/sigmausd/mining-incentives.md
+          # - Other Stablecoins: uses/sigmausd/comparison.md
+          # - Why?: uses/sigmausd/why-sigusd.md
         - ChainCash: uses/chaincash.md
         - Gluon: eco/gluon.md
         - DexyGold: eco/dexy.md
@@ -270,7 +272,7 @@ nav:
           - OptionPools: eco/optionPools.md
           - SigmaO: eco/sigmao.md
 
-          #- Tensile: eco/tensile.md
+          # - Tensile: eco/tensile.md
         - Crowdfunding:
           - uses/crowdfunding.md
           - ErgoRaffle: eco/ergoraffle.md
@@ -298,7 +300,7 @@ nav:
     - Gaming:
       - uses/gaming.md
       - BlitzTCG: eco/blitz.md
-      #- Metaverse:
+      # - Metaverse:
       #  - uses/metaverse.md
       - Cyberverse: eco/cyberverse.md
      #   - Sigmavalley: eco/sigmavalley.md
@@ -310,7 +312,7 @@ nav:
 
     - Tooling:
       - Crux Finance: eco/crux.md
-      #- Azorus: eco/azorus.md
+      # - Azorus: eco/azorus.md
 
       - ErgoNames: eco/ergonames.md
       - Reputation System: eco/reputation-system.md
@@ -337,8 +339,8 @@ nav:
           - Install on Android: eco/ergomixer/mixer-android.md
         - SigmaJoin: eco/sigmajoin.md
       - Stealth Addresses: uses/stealth-address.md
-      #- ZK Treasury: uses/zkt.md
-      #- Decentralised Anon ID:
+      # - ZK Treasury: uses/zkt.md
+      # - Decentralised Anon ID:
       #  - Ergo Nation: eco/ergonation.md
 
 
@@ -369,7 +371,7 @@ nav:
         - ICOs: uses/ergo-ico.md
         - Index Coins: uses/index_coins.md
         - PoW Tokens: uses/PoW_tokens.md
-        - Perpetual Tokens: uses/perpetual.md
+        - Perpetual Tokens: dev/tokens/perpetual.md
         - Buy Back Guarantees: uses/dex-buyback.md
 
 
@@ -391,12 +393,9 @@ nav:
     #  - CDBC: uses/cbdc.md
     # - Atomic Swaps: dev/protocol/atomic.md
   
-
   - Developers: 
     - dev/get-started.md
-    - 📌 Getting Started: 
-      - dev/get-started.md
-      - Students: students/index.md
+    - Students: students/index.md
     - Data Model:
       - Box: 
         - dev/data-model/box.md
@@ -425,7 +424,7 @@ nav:
         - dev/wallet/address.md
         - Types: dev/wallet/address/address_types.md
         - Validation: dev/wallet/address/address_validation.md
-       # - Encoding: assets/py/Ergo_Address_Encoding.ipynb
+        # - Encoding: assets/py/Ergo_Address_Encoding.ipynb
       - Transactions: 
         - dev/protocol/transactions.md
         - Composing Transactions:
@@ -444,21 +443,23 @@ nav:
           - dev/protocol/tx/babel-fees.md
           - Babel Fees Plugin: dev/protocol/tx/babel-fleet.md
         - Resources: 
+          - ErgoTool: dev/stack/ergotool.md
+          - Model Transaction: dev/protocol/tx/model-tx.md
+          - Payments: dev/anatomy/transactions/payments.md
           - Standards:
+            - dev/protocol/tx/standards.md #ToDo
             - Babel Fees: dev/protocol/tx/babel-fees.md
             - Proxy Contracts: dev/wallet/payments/standards/eip17.md
             - ErgoPay Protocol: dev/wallet/payments/standards/eip20.md
             - Payment Request URI: dev/wallet/payments/standards/eip25.md
             - Just-In-Time Costing: node/jitc.md
-          - ErgoTool: dev/stack/ergotool.md
-          - Model Transaction: dev/protocol/tx/model-tx.md
-          - Payments: dev/anatomy/transactions/payments.md
+
 
       - Block:
         - dev/data-model/block.md
         - Extension Section: dev/data-model/extension-section.md
     
-      #- UTXO-State: 
+      # - UTXO-State:
     - Infrastructure:
       - dev/interact.md
       - Node:
@@ -476,7 +477,7 @@ nav:
           - CPU Mining: node/testnet/cpu-mining.md
           - Fork your own chain: node/testnet/mine-your-own-chain.md
           - Resources: node/testnet/testnet-resources.md
-        #- Architecture: node/architecture.md
+        # - Architecture: node/architecture.md
         
         
   
@@ -506,7 +507,7 @@ nav:
             - OpenAPI Spec: node/swagger/openapi.md
             - Try it out!: node/swagger/swagger_api.md
             - Indexed Node API: node/indexed-node.md
-          - Configuration Files: 
+          - Configuration Files:
             - application.conf: 
               - node/conf.md
               - ergo: 
@@ -615,7 +616,6 @@ nav:
           - Mosaik: 
             - dev/stack/mosaik/intro.md
             - Tutorial:
-              - dev/stack/mosaik/intro.md
               - A simple UI: dev/stack/mosaik/tutorial2.md
               - Processing data: dev/stack/mosaik/tutorial3.md
               - ErgoPay: dev/stack/mosaik/tutorial4.md
@@ -645,7 +645,7 @@ nav:
         - EIP12-Types: dev/lib/eip12-types.md
         - SigmaJS: dev/lib/sigmajs.md
    
-      #- Bookmarks: dev/start/resources.md
+      # - Bookmarks: dev/start/resources.md
     - ErgoScript: 
         - dev/scs/ergoscript.md
           
@@ -661,7 +661,7 @@ nav:
           - Global Functions: dev/scs/global-functions.md 
           - Language Operations: dev/scs/sigma/lang-ops.md
           - Interacting with an Ergo Wallet:
-              #- dev/anatomy/transactions/payments.md
+              # - dev/anatomy/transactions/payments.md
               - Format: dev/protocol/tx/format.md
               - Merkle Tree: dev/protocol/tx/tx-merkle.md
               - Signing: dev/protocol/tx/signing.md
@@ -681,7 +681,7 @@ nav:
             - Box Structure: dev/scs/ergoscript/box-structure.md
             - Storing Data: dev/scs/ergoscript/storing-data.md
             - Creating a simple P2S app: dev/scs/p2s.md
-          #- Data Inputs: uses/context-claims.md
+          # - Data Inputs: uses/context-claims.md
         - Tooling:
           - dev/scs/ergoscript-tooling.md
           - Interpreters & Compilers:
@@ -692,7 +692,7 @@ nav:
             - ErgoScala: dev/stack/ergoscala.md
             - CLI Compiler: dev/stack/compiler.md
           - Playgrounds:
-            #- escript
+            # - escript
             - Scastie: dev/scs/ergoscript/scastie.md
             - P2S Playground: dev/stack/utilities/plutomonkey.md
             - Kiosk: dev/stack/kiosk.md
@@ -738,7 +738,7 @@ nav:
         - Ring Signatures:
           - 3-out-of-5 Threshold Signature: dev/scs/sigma/3-out-of-5.md
           - Distributed Signatures: node/sigs.md
-        #- Signature Scheme Internals: sig-scheme.md
+        # - Signature Scheme Internals: sig-scheme.md
         - ZeroJoin: dev/crypto/zerojoin.md
       - Data Structures:
         - dev/data-model/data-structures.md
@@ -764,7 +764,7 @@ nav:
 
           
    # - Resources: 
-      #- dev/stack/introduction.md
+      # - dev/stack/introduction.md
 
 
 
@@ -772,7 +772,6 @@ nav:
     - Autolykos:
       - mining/autolykos.md
       - Algorithm: 
-        - mining/algorithm.md
         - Emission:
           - mining/emission.md
           - EFYT: efyt.md
@@ -820,9 +819,8 @@ nav:
         - Hard Forks: mining/gov/hard-fork.md
     - Revenue: mining/revenue.md
     - Tooling:
-      - eco/miner-tooling.md
       - GuapSwap: eco/guapswap.md
-      - Lithos: 
+      - Lithos:
         - eco/lithos.md
         - SNISPs: eco/snisp.md
       - CYTI: eco/cyti.md
