--- a/requirements.txt
+++ b/requirements.txt
@@ -1,377 +1,181 @@
-abstract_singleton==1.0.1
-aiodns==3.0.0
-aiohttp==3.8.4
-aiohttp-retry==2.8.3
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.10
 aiosignal==1.3.1
-alabaster==0.7.13
-aleph-alpha-client==2.16.0
-antlr4-python3-runtime==4.9.3
-anyio==3.6.2
-appnope==0.1.3
-argilla==1.3.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.2.1
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==4.0.2
-asynctest==0.13.0
-attrs==22.2.0
-auto_gpt_plugin_template==0.0.3
-autoflake==2.1.1
-Babel==2.11.0
-backcall==0.2.0
+annotated-types==0.7.0
+anyio==4.7.0
+appnope==0.1.4
+asttokens==3.0.0
+attrs==24.2.0
+babel==2.16.0
 backoff==2.2.1
-beautifulsoup4==4.12.2
-black==23.3.0
-bleach==5.0.1
-blis==0.7.9
-blobfile==2.0.1
-boto3==1.26.82
-botocore==1.29.82
-bracex==2.3.post1
-bs4==0.0.1
-cachetools==5.3.0
-catalogue==2.0.8
-certifi==2023.5.7
-cffi==1.15.1
-cfgv==3.3.1
-chardet==5.1.0
-charset-normalizer==3.1.0
-click==8.1.3
-cmd2==2.4.3
-cohere==3.4.0
+beautifulsoup4==4.12.3
+bleach==6.2.0
+bracex==2.5.post1
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
 colorama==0.4.6
-coloredlogs==15.0.1
-comm==0.1.2
-commonmark==0.9.1
-confection==0.0.4
-contourpy==1.0.7
-coverage==7.2.5
-cryptography==39.0.2
-cssselect==1.2.0
-cycler==0.11.0
-cymem==2.0.7
-dataclasses-json==0.5.7
-debugpy==1.6.5
+comm==0.2.2
+ConfigArgParse==1.7
+cozmo @ git+https://github.com/c64-dev/cozmo-python-sdk.git@d2a5f7f4b2e5613ed8b1b51e9d4d546300eedec7
+cozmoclad==3.4.0
+debugpy==1.8.11
 decorator==5.1.1
-deeplake==3.2.12
 defusedxml==0.7.1
-Deprecated==1.2.13
-diffusers @ git+https://github.com/WAUthethird/diffusers-uncensored.git@ce048dfeef1fdd5504430f8b3ee885b707645a7b
-dill==0.3.6
-diskcache==5.6.1
-distlib==0.3.6
-distro==1.8.0
-dnspython==2.3.0
-docker==6.0.1
-docopt==0.6.2
-docutils==0.19
-docx2txt==0.8
-duckduckgo-search==2.9.3
-ecdsa==0.18.0
-ECPy==1.2.5
-einops==0.6.0
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
-entrypoints==0.4
-ergpy==0.1.8.7
-escodegen==1.0.10
-esprima==4.0.1
+diff-match-patch==20241021
+diskcache==5.6.3
+distro==1.9.0
+dpkt==1.9.8
 essentials==1.1.5
-essentials-openapi==1.0.3
-esutils==1.0.1
-et-xmlfile==1.1.0
-exceptiongroup==1.1.1
-executing==1.2.0
-faiss-cpu==1.7.3
-fastapi==0.95.0
-fastjsonschema==2.16.1
-fickling==0.0.4
-filelock==3.12.0
-flake8==6.0.0
-Flask==2.2.2
-flatbuffers==22.12.6
-fonttools==4.38.0
-frozenlist==1.3.3
-fsspec==2022.11.0
-gevent==22.10.2
+essentials-openapi==1.0.9
+executing==2.1.0
+fastjsonschema==2.21.1
+feedparser==6.0.11
+filelock==3.16.1
+flake8==7.1.1
+flatbuffers==24.3.25
+frozenlist==1.5.0
+fsspec==2024.10.0
 ghp-import==2.1.0
-gitdb==4.0.10
-GitPython==3.1.31
-google-api-core==2.11.0
-google-api-python-client==2.86.0
-google-auth==2.17.3
-google-auth-httplib2==0.1.0
-googleapis-common-protos==1.59.0
-greenlet==2.0.2
-grequests==0.6.0
-gTTS==2.3.1
-gunicorn==20.1.0
+gitdb==4.0.11
+GitPython==3.1.43
+greenlet==3.1.1
+grep-ast==0.4.1
 h11==0.14.0
-html==1.13
-httpcore==0.16.3
-httplib2==0.22.0
-httpx==0.23.3
-hub==3.0.1
-huggingface-hub==0.12.0
-humanfriendly==10.0
-humbug==0.2.8
-identify==2.5.24
-idna==3.4
-imagesize==1.4.1
-imhist==0.0.4
-importlib-metadata==4.12.0
-imWatermark==0.0.2
-iniconfig==2.0.0
-invisible-watermark==0.1.5
-ipykernel==6.20.1
-ipython==8.8.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.1
-isort==5.12.0
-itsdangerous==2.1.2
-javalang==0.13.0
-jedi==0.18.2
-Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.2.0
-JPype1==1.4.1
-jsonschema==4.14.0
-jupyter==1.0.0
-jupyter-console==6.4.4
-jupyter_client==7.4.8
-jupyter_core==5.1.3
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.2
-jupyterthemes==0.20.0
-jupytext==1.14.1
-kiwisolver==1.4.4
-langchain==0.0.103
-langcodes==3.3.0
-ldm==0.1.3
-lesscpy==0.15.1
-libmagic==1.0
-lightning-utilities==0.4.2
-loguru==0.7.0
-lxml==4.9.2
-manifest-ml==0.1.1
-Markdown==3.3.7
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-marshmallow==3.19.0
-marshmallow-enum==1.5.1
-matplotlib==3.6.3
-matplotlib-inline==0.1.6
+httpcore==1.0.7
+httpx==0.27.2
+huggingface-hub==0.26.5
+humanize==4.11.0
+idna==3.10
+importlib_metadata==7.2.1
+importlib_resources==6.4.5
+ipykernel==6.29.5
+ipython==8.30.0
+jedi==0.19.2
+Jinja2==3.1.4
+jiter==0.8.0
+json5==0.10.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+jupytext==1.16.5
+litellm==1.53.9
+Markdown==3.7
+markdown-it-py==3.0.0
+markdownify==0.13.1
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
 mccabe==0.7.0
-mdit-py-plugins==0.3.1
+mdit-py-plugins==0.4.2
 mdurl==0.1.2
 mergedeep==1.3.4
-mistune==0.8.4
-mkdocs==1.4.3
-mkdocs-autolinks-plugin==0.6.0
-mkdocs-awesome-pages-plugin==2.8.0
-mkdocs-categories-plugin==0.2.1
-mkdocs-exclude-search==0.6.4
-mkdocs-i18n==0.4.4
-mkdocs-jupyter==0.22.0
-mkdocs-material==9.1.14
-mkdocs-material-extensions==1.1.1
-mkdocs-pagenav-generator==1.0.1
-mkdocs-section-index==0.3.5
-mkdocs-semiliterate==0.6.0
-mkdocs-simple-plugin==1.1.1
-MkDocsAwesomeListPlugin==0.1.0
+mistune==3.0.2
+mixpanel==4.10.1
+mkdocs==1.6.1
+mkdocs-autolinks-plugin==0.7.1
+mkdocs-awesome-pages-plugin==2.9.3
+mkdocs-get-deps==0.2.0
+mkdocs-jupyter==0.25.1
+mkdocs-material==9.5.49
+mkdocs-material-extensions==1.3.1
+mkdocs-render-swagger-plugin==0.1.2
+mkdocs-section-index==0.3.9
 monotonic==1.6
-mpmath==1.2.1
-msg-parser==1.2.0
-multidict==6.0.4
-multiprocess==0.70.14
-murmurhash==1.0.9
-mypy-extensions==0.4.3
-natsort==8.1.0
-nbclient==0.6.7
-nbconvert==6.5.4
-nbformat==5.4.0
-neoteroi-mkdocs==0.1.2
-nest-asyncio==1.5.6
-nltk==3.8.1
-nodeenv==1.7.0
-notebook==6.4.12
-numcodecs==0.11.0
-numpy==1.23.5
+multidict==6.1.0
+natsort==8.4.0
+nbclient==0.10.1
+nbconvert==7.16.4
+nbformat==5.10.4
+neoteroi-mkdocs==1.1.0
+nest-asyncio==1.6.0
+networkx==3.2.1
+numpy==1.26.4
 oauthlib==3.2.2
-olefile==0.46
-omegaconf==2.3.0
-onnx==1.13.0
-onnxruntime==1.13.1
-openai==0.27.2
-openapi-python-client==0.13.4
-opencv-python==4.6.0.66
-openpyxl==3.1.1
-orjson==3.8.10
-outcome==1.2.0
-packaging==23.1
-pandas==1.5.3
-pandocfilters==1.5.0
-parso==0.8.3
-pathos==0.3.0
-pathspec==0.11.1
-pathy==0.10.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.4.0
-pinecone-client==2.2.1
-pipreqs==0.4.11
-platformdirs==3.5.0
-playsound==1.2.2
-plotly==5.12.0
-pluggy==1.0.0
-ply==3.11
-pox==0.3.2
-ppft==1.7.6.6
-praw==7.6.0
-prawcore==2.3.0
-pre-commit==3.3.1
-preshed==3.0.8
-prometheus-client==0.14.1
-prompt-toolkit==3.0.36
-protobuf==4.22.3
-psutil==5.9.4
+openai==1.57.0
+outcome==1.3.0.post0
+packaging==24.2
+paginate==0.5.7
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pathspec==0.12.1
+pexpect==4.9.0
+pillow==10.4.0
+platformdirs==4.3.6
+playwright==1.48.0
+posthog==3.7.4
+prompt_toolkit==3.0.48
+propcache==0.2.1
+psutil==6.1.0
 ptyprocess==0.7.0
-pure-eval==0.2.2
-py==1.11.0
-py-cpuinfo==9.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.3.0
-pycares==4.3.0
-pycodestyle==2.10.0
-pycparser==2.21
-pycryptodomex==3.17
-pydantic==1.10.4
-pyflakes==3.0.1
-Pygments==2.15.1
-PyJWT==2.6.0
-pymdown-extensions==10.0.1
-pyOpenSSL==23.1.1
-pypandoc==1.11
-pyparsing==3.0.9
-PyPDF2==3.0.1
-pyperclip==1.8.2
-pyrsistent==0.18.1
+pure_eval==0.2.3
+PyAudio==0.2.14
+pyChatGPT==0.4.3.3
+pycodestyle==2.12.1
+pycozmo==0.8.0
+pycparser==2.22
+pydantic==2.10.3
+pydantic_core==2.27.1
+pydub==0.25.1
+pyee==12.0.0
+pyflakes==3.2.0
+Pygments==2.18.0
+pymdown-extensions==10.12
+pypandoc==1.14
+pyperclip==1.9.0
 PySocks==1.7.1
-pytest==7.3.1
-pytest-asyncio==0.21.0
-pytest-benchmark==4.0.0
-pytest-cov==4.0.0
-pytest-integration==0.2.3
-pytest-mock==3.10.0
-pytest-recording==0.12.2
-python-dateutil==2.8.2
-python-docx==0.8.11
-python-dotenv==1.0.0
-python-jose==3.3.0
-python-magic==0.4.27
-python-markdown-math @ https://github.com/mitya57/python-markdown-math/archive/master.zip
-python-pptx==0.6.21
-pytorch-lightning==1.8.4.post0
-pytz==2022.7.1
--e git+https://github.com/robwaz/pywal@5dadd32a089e6553d26266866f6f197483695fa2#egg=pywal
-PyWavelets==1.4.1
-PyYAML==6.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+PyYAML==6.0.2
 pyyaml_env_tag==0.1
-pyzmq==24.0.1
-qtconsole==5.3.1
-QtPy==2.2.0
-readability-lxml==0.8.1
-redis==4.5.4
-regex==2023.5.5
-requests==2.31.0
+pyzmq==26.2.0
+referencing==0.35.1
+regex==2024.11.6
+requests==2.32.3
 requests-oauthlib==1.3.1
-retry==0.9.2
-rfc3986==1.5.0
-rich==13.0.1
-rsa==4.9
-s3transfer==0.6.0
-scikit-learn==1.2.1
-scipy==1.10.0
-seaborn==0.12.2
-selenium==4.1.3
-Send2Trash==1.8.0
-sentence-transformers==2.2.2
-sentencepiece==0.1.97
-shellingham==1.5.0.post1
-six==1.16.0
-smart-open==6.3.0
-smmap==5.0.0
-sniffio==1.3.0
-snowballstemmer==2.2.0
+rich==13.9.4
+rpds-py==0.22.3
+scipy==1.13.1
+selenium==4.25.0
+sgmllib3k==1.0.0
+six==1.17.0
+smmap==5.0.1
+sniffio==1.3.1
 sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-spacy==3.5.2
-spacy-legacy==3.0.12
-spacy-loggers==1.0.4
-Sphinx==6.1.3
-sphinxcontrib-applehelp==1.0.4
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-SQLAlchemy==1.4.46
-sqlitedict==2.1.0
-srsly==2.4.6
-stack-data==0.6.2
-starlette==0.26.1
-stubgenj==0.2.6
-sympy==1.11.1
-tenacity==8.2.1
-tensorboardX==2.5.1
-terminado==0.15.0
-thinc==8.1.10
-threadpoolctl==3.1.0
-tiktoken==0.3.3
-tinycss2==1.1.1
-tokenizers==0.13.2
-toml==0.10.2
-tomli==2.0.1
-torch==1.13.1
-torchmetrics==0.11.0
-torchvision==0.14.1
-tornado==6.2
-tqdm==4.64.1
-traitlets==5.8.1
-transformers==4.26.0
-trio==0.22.0
-trio-websocket==0.10.2
+sounddevice==0.5.1
+soundfile==0.12.1
+soupsieve==2.6
+SpeechRecognition==3.10.4
+stack-data==0.6.3
+termcolor==2.5.0
+tiktoken==0.8.0
+tinycss2==1.4.0
+tokenizers==0.19.1
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+tree-sitter==0.21.3
+tree-sitter-languages==1.10.2
+trio==0.26.2
+trio-websocket==0.11.1
 tweepy==4.14.0
-typer==0.7.0
-typing-inspect==0.8.0
-typing_extensions==4.4.0
-unstructured==0.4.11
-update-checker==0.18.0
-uritemplate==4.1.1
-urllib3==2.0.2
-urllib3-secure-extra==0.1.0
-uvicorn==0.21.1
-vcrpy==4.2.1
-virtualenv==20.23.0
-wasabi==1.1.1
-watchdog==3.0.0
-wcmatch==8.4
-wcwidth==0.2.5
-webdriver-manager==3.8.6
+typing_extensions==4.12.2
+tzdata==2024.2
+undetected-chromedriver==3.5.5
+Unidecode==1.3.8
+urllib3==2.2.3
+watchdog==6.0.0
+watchfiles==1.0.0
+wcmatch==10.0
+wcwidth==0.2.13
+webdriver-manager==4.0.2
 webencodings==0.5.1
-webpreview==1.7.2
-websocket-client==1.3.3
-websockets==11.0.1
-Werkzeug==2.2.3
-widgetsnbextension==4.0.2
-wrapt==1.14.1
+websocket-client==1.8.0
+websockets==13.1
 wsproto==1.2.0
-XlsxWriter==3.0.8
-xxhash==3.2.0
-yarg==0.1.9
-yarl==1.8.2
-zipp==3.8.1
-zope.event==4.6
-zope.interface==6.0
+yarl==1.18.3
+zipp==3.21.0
