--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -313,12 +313,17 @@ nav:
     - Tooling:
       - Crux Finance: eco/crux.md
       # - Azorus: eco/azorus.md
-
       - ErgoNames: eco/ergonames.md
       - Reputation System: eco/reputation-system.md
       - SigmaRand: eco/sigmarand.md
       - Moria Finance: eco/moria-finance.md
-      - Grid Trading: uses/grid_trading.md
+      - Trading:
+        - Arbit: uses/arbit.md
+        - Grid Trading:
+          - uses/grid_trading.md
+          - Off the Grid:
+            - uses/off_the_grid.md
+            - Tutorial: uses/off_the_grid_tut.md
     - Applications:
         - Thz.FM: eco/thz-fm.md
         - TabbyPOS: eco/tabbypos.md
