--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,6 +72,8 @@ plugins:
   - autolinks 
   - tags: # https://squidfunk.github.io/mkdocs-material/setup/setting-up-tags/#
       tags_file: tags.md
+  - bibtex:
+      bib_file: "refs.bib"
   # - categories
   # - exclude-search # https://github.com/chrieke/mkdocs-exclude-search
   # - semiliterate # http://studioinfinity.org/semiliterate/mkdocs_semiliterate/plugin/
@@ -81,6 +83,7 @@ plugins:
 
 
 markdown_extensions:
+  - footnotes
   - pymdownx.details  # Adds collapsible content sections with a "details" block.
   - pymdownx.tasklist:  # Enables task lists with checkboxes.
         custom_checkbox: true  # Allows custom checkboxes for task lists.
