--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyterlab_pygments==0.3.0
 jupytext==1.16.5
+latexcodec==3.0.0
 litellm==1.53.9
 Markdown==3.7
 markdown-it-py==3.0.0
@@ -77,6 +78,7 @@ mixpanel==4.10.1
 mkdocs==1.6.1
 mkdocs-autolinks-plugin==0.7.1
 mkdocs-awesome-pages-plugin==2.9.3
+mkdocs-bibtex==2.16.2
 mkdocs-get-deps==0.2.0
 mkdocs-jupyter==0.25.1
 mkdocs-material==9.5.49
@@ -113,6 +115,7 @@ psutil==6.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 PyAudio==0.2.14
+pybtex==0.24.0
 pyChatGPT==0.4.3.3
 pycodestyle==2.12.1
 pycozmo==0.8.0
@@ -168,6 +171,7 @@ tzdata==2024.2
 undetected-chromedriver==3.5.5
 Unidecode==1.3.8
 urllib3==2.2.3
+validators==0.34.0
 watchdog==6.0.0
 watchfiles==1.0.0
 wcmatch==10.0
