--- a/requirements.txt
+++ b/requirements.txt
@@ -1,185 +1,95 @@
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.10
-aiosignal==1.3.1
-annotated-types==0.7.0
-anyio==4.7.0
+anyio==4.8.0
 appnope==0.1.4
 asttokens==3.0.0
-attrs==24.2.0
-babel==2.16.0
-backoff==2.2.1
-beautifulsoup4==4.12.3
+attrs==25.1.0
+babel==2.17.0
+backrefs==5.8
+beautifulsoup4==4.13.3
 bleach==6.2.0
-bracex==2.5.post1
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-click==8.1.7
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
 comm==0.2.2
-ConfigArgParse==1.7
-cozmo @ git+https://github.com/c64-dev/cozmo-python-sdk.git@d2a5f7f4b2e5613ed8b1b51e9d4d546300eedec7
-cozmoclad==3.4.0
-debugpy==1.8.11
-decorator==5.1.1
+debugpy==1.8.13
+decorator==5.2.1
 defusedxml==0.7.1
-diff-match-patch==20241021
-diskcache==5.6.3
-distro==1.9.0
-dpkt==1.9.8
 essentials==1.1.5
-essentials-openapi==1.0.9
-executing==2.1.0
+essentials-openapi==1.1.0
+executing==2.2.0
 fastjsonschema==2.21.1
-feedparser==6.0.11
-filelock==3.16.1
-flake8==7.1.1
-flatbuffers==24.3.25
-frozenlist==1.5.0
-fsspec==2024.10.0
 ghp-import==2.1.0
-gitdb==4.0.11
-GitPython==3.1.43
-greenlet==3.1.1
-grep-ast==0.4.1
 h11==0.14.0
 httpcore==1.0.7
-httpx==0.27.2
-huggingface-hub==0.26.5
-humanize==4.11.0
+httpx==0.28.1
 idna==3.10
-importlib_metadata==7.2.1
-importlib_resources==6.4.5
 ipykernel==6.29.5
-ipython==8.30.0
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
 jedi==0.19.2
-Jinja2==3.1.4
-jiter==0.8.0
-json5==0.10.0
+Jinja2==3.1.5
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyterlab_pygments==0.3.0
-jupytext==1.16.5
+jupytext==1.16.7
 latexcodec==3.0.0
-litellm==1.53.9
 Markdown==3.7
 markdown-it-py==3.0.0
-markdownify==0.13.1
-MarkupSafe==2.1.5
+MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
-mccabe==0.7.0
 mdit-py-plugins==0.4.2
 mdurl==0.1.2
 mergedeep==1.3.4
-mistune==3.0.2
-mixpanel==4.10.1
+mistune==3.1.2
 mkdocs==1.6.1
 mkdocs-autolinks-plugin==0.7.1
-mkdocs-awesome-pages-plugin==2.9.3
 mkdocs-bibtex==2.16.2
 mkdocs-get-deps==0.2.0
 mkdocs-jupyter==0.25.1
-mkdocs-material==9.5.49
+mkdocs-material==9.6.7
 mkdocs-material-extensions==1.3.1
 mkdocs-render-swagger-plugin==0.1.2
 mkdocs-section-index==0.3.9
-monotonic==1.6
-multidict==6.1.0
-natsort==8.4.0
-nbclient==0.10.1
-nbconvert==7.16.4
+nbclient==0.10.2
+nbconvert==7.16.6
 nbformat==5.10.4
 neoteroi-mkdocs==1.1.0
 nest-asyncio==1.6.0
-networkx==3.2.1
-numpy==1.26.4
-oauthlib==3.2.2
-openai==1.57.0
-outcome==1.3.0.post0
 packaging==24.2
 paginate==0.5.7
-pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
-pillow==10.4.0
 platformdirs==4.3.6
-playwright==1.48.0
-posthog==3.7.4
-prompt_toolkit==3.0.48
-propcache==0.2.1
-psutil==6.1.0
+prompt_toolkit==3.0.50
+psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
-PyAudio==0.2.14
 pybtex==0.24.0
-pyChatGPT==0.4.3.3
-pycodestyle==2.12.1
-pycozmo==0.8.0
-pycparser==2.22
-pydantic==2.10.3
-pydantic_core==2.27.1
-pydub==0.25.1
-pyee==12.0.0
-pyflakes==3.2.0
-Pygments==2.18.0
-pymdown-extensions==10.12
+Pygments==2.19.1
+pymdown-extensions==10.14.3
 pypandoc==1.14
-pyperclip==1.9.0
-PySocks==1.7.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2024.2
 PyYAML==6.0.2
 pyyaml_env_tag==0.1
-pyzmq==26.2.0
-referencing==0.35.1
-regex==2024.11.6
+pyzmq==26.2.1
+referencing==0.36.2
 requests==2.32.3
-requests-oauthlib==1.3.1
 rich==13.9.4
-rpds-py==0.22.3
-scipy==1.13.1
-selenium==4.25.0
-sgmllib3k==1.0.0
+rpds-py==0.23.1
 six==1.17.0
-smmap==5.0.1
 sniffio==1.3.1
-sortedcontainers==2.4.0
-sounddevice==0.5.1
-soundfile==0.12.1
 soupsieve==2.6
-SpeechRecognition==3.10.4
 stack-data==0.6.3
-termcolor==2.5.0
-tiktoken==0.8.0
 tinycss2==1.4.0
-tokenizers==0.19.1
 tornado==6.4.2
-tqdm==4.67.1
 traitlets==5.14.3
-tree-sitter==0.21.3
-tree-sitter-languages==1.10.2
-trio==0.26.2
-trio-websocket==0.11.1
-tweepy==4.14.0
 typing_extensions==4.12.2
-tzdata==2024.2
-undetected-chromedriver==3.5.5
-Unidecode==1.3.8
-urllib3==2.2.3
+urllib3==2.3.0
 validators==0.34.0
 watchdog==6.0.0
-watchfiles==1.0.0
-wcmatch==10.0
 wcwidth==0.2.13
-webdriver-manager==4.0.2
 webencodings==0.5.1
-websocket-client==1.8.0
-websockets==13.1
-wsproto==1.2.0
-yarl==1.18.3
-zipp==3.21.0
