--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,9 @@ extra:
 
 plugins:
   - search
+  - rss
+  - git-revision-date-localized
+  - glightbox
   - render_swagger:
       allow_arbitrary_locations: true
   - neoteroi.mkdocsoad
