--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ babel==2.17.0
 backrefs==5.8
 beautifulsoup4==4.13.3
 bleach==6.2.0
+CacheControl==0.14.2
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
@@ -18,7 +19,10 @@ essentials==1.1.5
 essentials-openapi==1.1.0
 executing==2.2.0
 fastjsonschema==2.21.1
+filelock==3.17.0
 ghp-import==2.1.0
+gitdb==4.0.12
+GitPython==3.1.44
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -47,11 +51,15 @@ mkdocs==1.6.1
 mkdocs-autolinks-plugin==0.7.1
 mkdocs-bibtex==2.16.2
 mkdocs-get-deps==0.2.0
+mkdocs-git-revision-date-localized-plugin==1.4.4
+mkdocs-glightbox==0.4.0
 mkdocs-jupyter==0.25.1
 mkdocs-material==9.6.7
 mkdocs-material-extensions==1.3.1
 mkdocs-render-swagger-plugin==0.1.2
+mkdocs-rss-plugin==1.17.1
 mkdocs-section-index==0.3.9
+msgpack==1.1.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -73,6 +81,7 @@ Pygments==2.19.1
 pymdown-extensions==10.14.3
 pypandoc==1.14
 python-dateutil==2.9.0.post0
+pytz==2025.1
 PyYAML==6.0.2
 pyyaml_env_tag==0.1
 pyzmq==26.2.1
@@ -81,6 +90,7 @@ requests==2.32.3
 rich==13.9.4
 rpds-py==0.23.1
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
