disabling bibtex so it builds

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,11 +74,11 @@ plugins:
   #- awesome-nav #https://github.com/lukasgeiter/mkdocs-awesome-pages-plugin
   - autolinks 
   - tags: # https://squidfunk.github.io/mkdocs-material/setup/setting-up-tags/#
-  - bibtex:
-      bib_file: refs.bib
+  #- bibtex:
+  #    bib_file: refs.bib
   #- categories
-  - exclude-search # https://github.com/chrieke/mkdocs-exclude-search
-  - semiliterate # http://studioinfinity.org/semiliterate/mkdocs_semiliterate/plugin/
+  #- exclude-search # https://github.com/chrieke/mkdocs-exclude-search
+  #- semiliterate # http://studioinfinity.org/semiliterate/mkdocs_semiliterate/plugin/
   #- pagenav-generator #https://github.com/Andre601/mkdocs-pagenav-generator
 
 
