--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ appnope==0.1.4
 asttokens==3.0.0
 attrs==25.1.0
 babel==2.17.0
+backcall==0.2.0
 backrefs==5.8
 beautifulsoup4==4.13.3
 bleach==6.2.0
@@ -28,7 +29,7 @@ httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 ipykernel==6.29.5
-ipython==8.0,<9.0
+ipython==8.34.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 Jinja2==3.1.5
@@ -48,6 +49,7 @@ mdurl==0.1.2
 mergedeep==1.3.4
 mistune==3.1.2
 mkdocs==1.6.1
+mkdocs-alias-plugin==0.8.1
 mkdocs-autolinks-plugin==0.7.1
 mkdocs-bibtex==2.16.2
 mkdocs-get-deps==0.2.0
@@ -71,6 +73,7 @@ pandocfilters==1.5.1
 parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
+pickleshare==0.7.5
 platformdirs==4.3.6
 prompt_toolkit==3.0.50
 psutil==7.0.0
@@ -86,6 +89,7 @@ PyYAML==6.0.2
 pyyaml_env_tag==0.1
 pyzmq==26.2.1
 referencing==0.36.2
+regex==2023.12.25
 requests==2.32.3
 rich==13.9.4
 rpds-py==0.23.1
@@ -94,7 +98,9 @@ smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
+tabulate==0.9.0
 tinycss2==1.4.0
+toml==0.10.2
 tornado==6.4.2
 traitlets==5.14.3
 typing_extensions==4.12.2
