--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
 # Controls when the workflow will run
@@ -36,14 +34,18 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9  # Change if you need a different version
+          python-version: 3.11  # Match Python version with your local environment
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install mkdocs-bibtex  # Ensure bibtex plugin is installed
           pip install -r requirements.txt
 
-      - name: Deploy the app
+      - name: Verify MkDocs Plugins
         run: |
-          pip install mkdocs-bibtex
-          bash ./tools/deploy.sh
+          mkdocs --version  # Debugging step
+          pip list | grep mkdocs  # Ensure mkdocs-bibtex is installed
+
+      - name: Deploy the app
+        run: bash ./tools/deploy.sh
