--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
           python -m mkdocs build --clean
           echo "✅ MkDocs build complete!"
           echo "🔍 Verifying generated files (filenames and modification times only)..."
-          find ./site -type f -printf "🕒 %TY-%Tm-%Td %TH:%TM:%TS %p\n" | sort -r | head -20
+          find ./site -type f -printf "🕒 %TY-%Tm-%Td %TH:%TM:%TS %p\n" | sort -r | head -n 20 || true
 
       - name: Debug Deploy Script Output
         run: |
@@ -59,7 +59,7 @@ jobs:
       - name: Verify Deployment on Remote Server
         run: |
           echo "🔍 Checking deployed files on remote server..."
-          ssh root@88.198.50.217 'find ./site -type f -printf "🕒 %TY-%Tm-%Td %TH:%TM:%TS %p\n" | sort -r | head -n 20 || true"'
+          ssh root@88.198.50.217 'find /var/www/html/ergodocs/site -type f -printf "🕒 %TY-%Tm-%Td %TH:%TM:%TS %p\n" | sort -r | head -n 20 || true'
           echo "🔍 Checking file ownership (should NOT be root)..."
           ssh root@88.198.50.217 'ls -la /var/www/html/ergodocs/site | grep " root " && echo "❗ WARNING: Files are owned by root. deploy.sh might be running as root!" || echo "✅ Ownership looks good!"'
 
